--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Hanuman Dada Murti Inauguration | Krishan Temple Nakuru"
     />
     <link rel="apple-touch-icon" href="https://res.cloudinary.com/dbsm7cstc/image/upload/v1766394595/hmi22_qxyuks.png" />
     <!--
